Add regulatory_bodies tags
